
5.78  2015-02-12
  - Replaced expires method in Mojo::Cookie::Response with an attribute.
  - Added split_cookie_header function to Mojo::Util.
  - Relaxed RFC 822/1123 and RFC 850/1036 handling in Mojo::Date.
  - Improved Mojo::Reactor::Poll performance significantly.
  - Improved text method in Mojo::Message to use default_charset as well.
  - Improved design of built-in templates.
  - Fixed bug in Mojo::DOM that made parsing a requirement.
  - Fixed warnings in Mojo::URL.

5.77  2015-02-03
  - Added content_security_policy method to Mojo::Headers.
  - Fixed canonicalize in Mojo::Path to not remove parts with more than three
    dots.

5.76  2015-02-02
  - Emergency release for a critical security issue that can expose files on
    Windows systems, everybody should update!
  - Increased default max_message_size from 10MB to 16MB in Mojo::Message.
  - Reduced default max_line_size from 10KB to 8KB in Mojo::Headers and
    Mojo::Message.
  - Improved Hypnotoad load balancing by calling srand() after starting a new
    worker in Mojo::Server::Prefork.
  - Improved design of built-in templates.
  - Fixed bug in Mojo::IOLoop where the accept limit was applied too broadly.
  - Fixed bug in Mojo::Server::Prefork where the TTOU signal would not always
    stop a worker.
  - Fixed bug in Mojo::DOM::CSS where combinators needed to be surrounded by
    whitespace.

5.75  2015-01-26
  - Added healthy method to Mojo::Server::Prefork.
  - Improved all built-in web servers to die if group or user assignment
    failed.
  - Improved Hypnotoad to wait for new workers to be ready before stopping the
    old ones during hot deployment.
  - Improved commands and log messages to use less punctuation.
  - Fixed bug in Mojo::IOLoop where the callback passed to next_tick would
    receive the wrong invocant.
  - Fixed race condition and memory leak in Mojo::Server::Prefork.

5.74  2015-01-25
  - Improved parser errors to be more consistent with connection errors in