@@ -10,7 +10,7 @@ use Mojo::IOLoop::Server;
 
 plan skip_all => 'set TEST_ONLINE to enable this test (developer only!)'
   unless $ENV{TEST_ONLINE};
-plan skip_all => 'IO::Socket::SSL 1.84 required for this test!'
+plan skip_all => 'IO::Socket::SSL 2.0 required for this test!'
   unless Mojo::IOLoop::Server::TLS;
 
 use IO::Socket::INET;
